feat : Add User Service business and unit test with basic directory structure